# Reproduce-ResNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
.neptune/async/run__9e26269b-7258-4729-ad53-634eecd671af__3517993__tpsdj14f/: metadata.json
.neptune/async/run__9e262cf3-9777-45df-a0b7-f925f6c0d282__3525664__tpsdj14f/: metadata.json
.neptune/async/run__9e26377e-892c-44ad-8052-b24a977988a7__3533498__tpsdj14f/: metadata.json
config/data/: imagenet.toml
config/train/: resnet18-sgd-sam-v1.toml  resnet18-sgd-sam-v2.toml  resnet18-sgd.toml  resnet50-adam.toml  resnet50-sf-adamw.toml  resnet50-sf-sgd.toml  resnet50-sgd-sam-v1.toml  resnet50-sgd-sam-v2.toml  resnet50-sgd-sam.toml  resnet50-sgd.toml  resnet50.toml  vit_base_16.toml
scripts/data/: image_to_wds.py
scripts/train/: 16xA100.sh  16xA40.sh  32xT4.sh  4xA100.sh  4xA40.sh  4xV100.sh  8xA100.sh  8xA40.sh  8xV100.sh  local.sh
src/: conf.py  eval.py  ffcv_writer.py  models.py  optims.py  plot.py  train.py  utils.py
src/custom_optims/: sam.py
src/data/: __init__.py  dataloader.py  preload.py
