[project]
name = "reproduce-resnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "nvidia-dali-cuda120>=1.52.0",
    "pydantic>=2.12.3",
    "schedulefree>=1.4.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tomli-w>=1.2.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]

[dependency-groups]
dev = [
    "torch-tb-profiler>=0.4.3",
]
